Fix Drawer visibility in 'expand' revealMode, right menu position (T683392) (#5883)

--- a/styles/widgets/common/drawer.less
+++ b/styles/widgets/common/drawer.less
@@ -80,6 +80,12 @@
     .dx-drawer-panel-content {
         z-index: 1;
     }
+
+    &.dx-drawer-right.dx-drawer-expand {
+        .dx-overlay-content {
+            right: 0px;
+        }
+    }
 }
 
 .dx-overlay-wrapper.dx-drawer-panel-content {
